--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,10 +8,13 @@ phases:
       - dotnet restore AWSCodePipelineDemo/AWSCodePipelineDemo.csproj
   build:
     commands:
-      - dotnet build AWSCodePipelineDemo/AWSCodePipelineDemo.csproj
+      - dotnet build -c Release
   post_build:
     commands:
-      - dotnet publish -c Release -o ./app/AWSCodePipelineDemo/AWSCodePipelineDemo.csproj
+      - dotnet publish -c Release -o ./build_output ./AWSCodePipelineDemo/AWSCodePipelineDemo.csproj --self-contained false
+      - cp Procfile ./build_output
 artifacts:
   files:
     - '**/*'
+  base-directory: ./build_output
+  discard-paths: no
